--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
     </div>
     <!-- Hero Section -->
-    <div class="row align-items-center hero">
+    <div class="row  hero">
         <div class="text-center text-md-start col-md-5">
 
             <h1>PayGuru</h1>
@@ -53,7 +53,7 @@
             </h2>
         </div>
 
-        <div class="row g-3 g-md-4 justify-content-center">
+        <div class="row g-3 g-md-5 justify-content-center">
             <div class="col-6">
                 <div class="text-start info-card p-2 p-md-4 shadow-sm">
                     <div class="icon mb-4 mb-md-3">
@@ -84,7 +84,7 @@
             </h2>
         </div>
 
-        <div class="row g-3 g-lg-4 justify-content-center">
+        <div class="row g-3 g-lg-5 justify-content-center">
             <!-- Блок 1 -->
             <div class="col-6 col-lg-4">
                 <div class="feature-card  shadow-sm">
@@ -204,7 +204,7 @@
             <h2>Пакеты запуска<br class="d-block d-md-none"> White-Label<br class="d-none d-md-block"> на базе <br class="d-block d-md-none">PayGuru</h2>
         </div>
 
-        <div class="row g-5 mb-5">
+        <div class="row g-5 mb-2r">
             <!-- Тариф: Aggregator -->
             <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
@@ -277,7 +277,7 @@
             </div>
         </div>
 
-        <div class="row g-5 mb-5">
+        <div class="row g-5 mb-2r">
             <!-- Тариф: Aggregator -->
             <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
@@ -349,7 +349,7 @@
         <div class="addon-card mt-4">
             <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center gap-3">
                 <div>
-                    <div class="plan-label">Add-On</div>
+                    <div class="plan-label">ADD-ON</div>
                     <h5>Дополнительная интеграция</h5>
                     <p class="mb-0">Стоимость: от $1,500</p>
                 </div>
@@ -364,7 +364,7 @@
 <section class="features features__bg">
     <div class="container" style="max-width: 1320px;">
         <div class="text-center mb-5">
-            <h2>
+            <h2 class="mb54rem">
                 <span class="gradient-text">Алгоритм </span><br> распределения сделок
             </h2>
         </div>
@@ -372,7 +372,7 @@
         <div class="row g-3 g-md-4 justify-content-center">
             <!-- Блок 1 -->
             <div class="col-6  col-md-4">
-                <div class="feature-card p-2 p-md-4  shadow-sm">
+                <div class="feature-card   shadow-sm">
                     <div class="feature-number">1</div>
                     <h5>25+ параметров отбора</h5>
                     <ul>
@@ -385,7 +385,7 @@
 
             <!-- Блок 2 -->
             <div class="col-6  col-md-4">
-                <div class="feature-card p-2 p-md-4 shadow-sm">
+                <div class="feature-card  shadow-sm">
                     <div class="feature-number">2</div>
                     <h5>Распределение<br class="d-block d-md-none"> по весам<br class="d-block d-md-none"> и приоритетам</h5>
                     <ul>
@@ -397,7 +397,7 @@
 
             <!-- Блок 3 -->
             <div class="col-6  col-md-4">
-                <div class="feature-card p-2 p-md-4 shadow-sm">
+                <div class="feature-card  shadow-sm">
                     <div class="feature-number">3</div>
                     <h5>Интеллектуальные «отступы» </h5>
                     <ul>
@@ -564,7 +564,7 @@
             <!-- Готовая инфраструктура -->
             <div class="col-md-6 col-xl-6">
                 <div class="wl-card p-4">
-                    <div class="wl-icon wl-icon-5">
+                    <div class="wl-icon wl-icon-5 mb-21px">
                         <img src="img/icon-calendar.svg" alt="Иконка">
                     </div>
                     <h5>Развёртывание<br> под бренд клиента</h5>
@@ -576,7 +576,7 @@
             <!-- Быстрый запуск -->
             <div class="col-md-6 col-xl-6">
                 <div class="wl-card p-4">
-                    <div class="wl-icon wl-icon-6">
+                    <div class="wl-icon wl-icon-6 mb-21px">
                         <img src="img/icon-setting.svg" alt="Иконка">
                     </div>
                     <h5>Еженедельные <br>обновления</h5>
@@ -588,7 +588,7 @@
 
 
         </div>
-        <h2 class="text-center pt-7 fw-bold">Технологии<br class="d-block d-md-none"> в действии</h2>
+        <h2 class="text-center pt-6 fw-bold">Технологии<br class="d-block d-md-none"> в действии</h2>
     </div>
 </section>
 
@@ -606,7 +606,7 @@
         </div>
         <div class="tech-box tech-card">
             <h5><span class="gradient-text">Надёжность</span></h5>
-            <p>Поддержка критически важного бизнеса 24/7, проверено миллионами транзакций</p>
+            <p>Поддержка критически<br class="d-none d-md-block"> важного бизнеса 24/7, проверено<br class="d-none d-md-block"> миллионами транзакций</p>
         </div>
         <div class="tech-box tech-card">
             <h5><span class="gradient-text">Безопасность</span></h5>
@@ -626,7 +626,7 @@
         </div>
         <div class="tech-box tech-card">
             <h5><span class="gradient-text">Автоматизация</span></h5>
-            <p>Более 90% операций проходят без ручного вмешательства; интеллектуальная маршрутизация</p>
+            <p>Более 90% операций проходят<br class="d-none d-md-block"> без ручного вмешательства;<br class="d-none d-md-block"> интеллектуальная маршрутизация</p>
         </div>
     </div>
 </section>
