--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="text-center text-md-start col-md-5">
 
             <h1>PayGuru</h1>
-            <p>Универсальный платёжный агрегатор<br class="d-none d-md-block"> с глобальным покрытием и гибкими<br class="d-none d-md-block"> возможностями</p>
+            <p>Универсальный платёжный<br class="d-block d-md-none"> агрегатор<br class="d-none d-md-block"> с глобальным покрытием<br class="d-block d-md-none"> и гибкими<br class="d-none d-md-block"> возможностями</p>
             <a href="#about"  class="btn btn-main">Узнать подробнее</a>
         </div>
         <div class="col-md-7 text-center">
